k8s/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-a
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  strategy: {}
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - image: alokraj889/service-a:0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 3001
        name: service-a
        resources: {}
status: {}
