k8s/deployment-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  strategy: {}
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - image: alokraj889/service-b:0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 3002
        name: service-b
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi" 
status: {}
