k8s/deployment-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-c
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  strategy: {}
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - image: alokraj889/service-c:0.1
        imagePullPolicy: Always
        ports:
          - containerPort: 3003
        name: service-c
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "1"
            memory: "512Mi" 
status: {}
