k8s/service-b.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-b
  name: service-b
spec:
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: service-b
  type: LoadBalancer
status:
  loadBalancer: {}
