k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
  namespace: default
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: service-a.local
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: service-a
                  port:
                    number: 80
